[package]
name = "tauri-plugin-printer"
version = "1.0.10"
edition = "2021"
authors = ["Alfian Lensun <alfianlensundev@gmail.com>"]
description = "Tauri Plugin for printer access"
homepage = "https://crates.io/crates/tauri-plugin-printer"
readme = "README.md"
rust-version = "1.60"
exclude = ["/examples"]
keywords = [
    "tauri",
    "printer",
    "print",
    "printing",
    "json"
]
categories = [
    "os",
    "os::windows-apis"
]
license = "MIT"
repository = "https://github.com/alfianlensundev/tauri-plugin-printer"


[dependencies]
base64 = "0.21.2"
tauri = { version = "2.0.0-alpha", features = [ "window-data-url"] }
tauri-plugin-http = "2.0.0-alpha.0"

[build-dependencies]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

